# lyapunov

./: .gitignore  README.md  SPEC_FORMAT.md  affine.py  autolevels.py  autolevels.sh  autolevels_dir.sh  boring_edges.py  boring_helpers.py  boring_shapes.py  boring_spectrum.py  config.py  dedupe_top.py  delete_boring.py  eq48.Rnw  equalize.py  evaluate_image.sh  explore.sh  extract_spec.sh  field_color.py  fields.py  fun.txt  functions.py  gemini.html  gemini2.html  gemini2_manifest.json  gemini_manifest.json  google_ocr.sh  grids.txt  img2expr.py  img2expr2.py  img2paint.py  img_evaluate.py  join_with_border.sh  jpg2dzi.sh  list.txt  lyapunov.Rnw  lyapunov.py  lyapunov_cli.py  macros.txt  (+28 more)
maps/: __init__.py  defaults.py  fields.py  functions.py  hist_fields.py  hist_helpers.py  lyapunov_fields.py  map_functions.py  maps_step1d.py  maps_step2d.py  maps_step2d_ab.py  maps_step2d_xy0.py  spectral_fields.py
nn14loc100/: used_macros.txt
nn14loc101/: used_macros.txt
nn14loc102/: used_macros.txt
nn14loc92/: used_macros.txt
nn14loc93/: used_macros.txt
nn14loc94/: used_macros.txt
nn14loc95/: used_macros.txt
nn14loc96/: used_macros.txt
nn14loc97/: used_macros.txt
nn14loc98/: used_macros.txt
nn14loc99/: used_macros.txt
tests/: test_cli.py  test_config.py  test_fields.py  test_maps.py
